data/derived/fa15/progs/unify/prog3045.ml.out
Characters 79-85:
  | hd::tl -> mulByDigit i tl @ hd * i;;
                                ^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
